[package]
name = "scribe"
version = "0.1.0"
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.13"
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["uuid"] }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper" }
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool"]
