[package]
name = "ledge"
version = "0.1.0"
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
dirs = "1.0"
dotenv = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
